# quantum-pipeline

./: .dockerignore  .env.ml.example  .env.thesis.example  .example-env  .gitignore  .vale.ini  .yamlfmt.yaml  BUGS.md  Dockerfile  LEARNING_ROADMAP.md  LICENSE  PLAN.md  README.md  VULNERABILITIES.md  build_aer_gpu.sh  config-molecules-sto3g-COBYLA-local-20250122.json  docker-compose.thesis.yaml  docker-compose.yaml  justfile  main.py  mkdocs.yml  pyproject.toml  quantum_pipeline.py  requirements-airflow.txt  requirements-dev.txt  requirements.txt  ssl-gen.sh
.github/: CODEOWNERS  codeql-config.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy-docs.yml  docker-image.yml  docker-publish.yml  docs.yml  mirror-codeberg.yml  publish-docker-gpu.yml  publish-docker.yml  publish-pypi.yml  publish.yml  pypi-publish.yml  scorecard.yml  security-scan.yml  test.yml
compose/: docker-compose.ml.kafka-connect.yaml  docker-compose.ml.yaml  docker-compose.thesis.yaml  docker-compose.yaml  garage.toml.template  redpanda-connect.yaml  spark-defaults.conf
data/: molecules.cpu.json  molecules.gpu1.json  molecules.gpu2.json  molecules.json  molecules.json.bak  molecules.thesis.json
docker/: Dockerfile.airflow  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.spark  Dockerfile.spark.ml  README.md  docker-compose.yaml
docker/airflow/: Dockerfile  quantum_feature_processing.py  quantum_ml_feature_dag.py  quantum_processing_dag.py  r2_sync_dag.py  requirements.txt  vqe_batch_generation_dag.py
docker/connectors/: garage-sink-config.json  minio-sink-config.json
docker/postgres/: init-databases.sh
docker/scripts/: build-aer-gpu.sh  ssl-gen.sh
docker/spark-jobs/: feature-incremental-processing.py
docs/: changelog.md  index.md
docs/architecture/: avro-serialization.md  data-flow.md  index.md  serialization.md  system-design.md
docs/data-platform/: airflow-orchestration.md  iceberg-storage.md  index.md  kafka-streaming.md  spark-processing.md
docs/deployment/: docker-basics.md  docker-compose.md  environment-variables.md  gpu-acceleration.md  index.md
docs/getting-started/: basic-usage.md  installation.md  quick-start.md
docs/monitoring/: grafana-dashboards.md  index.md  performance-metrics.md
docs/reference/: changelog.md  faq.md  troubleshooting.md
docs/scientific/: basis-sets.md  benchmarking.md  index.md  vqe-algorithm.md
docs/stylesheets/: extra.css
docs/usage/: configuration.md  examples.md  index.md  optimizers.md  simulation-methods.md
examples/: docker-compose-kafka.yml  kafka-sasl-ssl.yml  kafka-ssl.yml
monitoring/: README.md  prometheus.yml
notebooks/: data-processing.ipynb  eda.ipynb  simulation.ipynb
quantum_pipeline/: __main__.py  cli.py
quantum_pipeline/circuits/: __init__.py  initial_states.py
quantum_pipeline/configs/: argparser.py  constants.py  defaults.py  settings.py
quantum_pipeline/drivers/: basis_sets.py  molecule_loader.py
quantum_pipeline/features/: circuit.py
quantum_pipeline/mappers/: __init__.py  jordan_winger_mapper.py  mapper.py
quantum_pipeline/ml/: __init__.py  convergence_predictor.py  energy_estimator.py  preprocessing.py  tracking.py
quantum_pipeline/monitoring/: __init__.py  performance_monitor.py  scientific_references.py
quantum_pipeline/report/: configuration.py  content_builder.py  renderer.py  report_generator.py
quantum_pipeline/runners/: runner.py  vqe_runner.py
quantum_pipeline/solvers/: hf_init.py  optimizer_config.py  solver.py  vqe_solver.py
quantum_pipeline/stream/: kafka_interface.py  kafka_security.py
quantum_pipeline/structures/: vqe_observation.py
quantum_pipeline/utils/: dir.py  logger.py  observation.py  schema_registry.py  timer.py  visualizer.py
quantum_pipeline/visual/: ansatz.py  energy.py  molecule.py  operator.py
quantum_simulation/configs/: settings.py
quantum_simulation/drivers/: basis_sets.py  molecule_loader.py
quantum_simulation/features/: hamiltonian.py
quantum_simulation/mappers/: jordan_winger_mapper.py  mapper.py
quantum_simulation/report/: report_generator.py
quantum_simulation/runners/: runner.py  vqe_runner.py
quantum_simulation/solvers/: classical_solver.py  qpe_solver.py  solver.py  vqe_solver.py
quantum_simulation/utils/: dir.py  logger.py  observation.py
quantum_simulation/visual/: ansatz.py  energy.py  molecule.py  operator.py
quantum_simulation/visualization/: anstaz.py  energy.py  molecule.py  operator.py  state.py
scripts/: generate_ml_batch.py  ml-setup.sh  smoke_test_ml_pipeline.sh  validate-thesis-setup.sh
tests/: conftest.py  test_molecule_loader.py  test_vqe_solver.py
tests/circuits/: test_initial_states.py
tests/configs/: test_argparser.py  test_backend_config.py  test_producer_config.py  test_security_config.py
tests/drivers/: test_basis_sets.py  test_molecule_loader.py
tests/integration/: conftest.py  test_argparser_vqe_integration.py  test_kafka_container.py  test_kafka_pipeline_e2e.py  test_pipeline_integration.py  test_schema_registry_container.py
tests/mappers/: test_jordan_winger_mapper.py
tests/ml/: conftest.py  test_convergence_predictor.py  test_energy_estimator.py
tests/monitoring/: __init__.py  test_configuration_manager_monitoring.py  test_performance_monitor.py  test_scientific_references.py
tests/report/: test_report_generation.py
tests/runners/: test_vqe_runner.py
tests/solvers/: test_hf_init.py  test_optimizer_config.py  test_optimizer_maxfun_fix.py  test_optimizer_priorities.py  test_priority_behavior.py  test_seed_reproducibility.py  test_solver_base.py  test_vqe_max_optimizer_param_prioritization.py  test_vqe_optimizer_params.py  test_vqe_solver.py  test_vqe_solver_coverage.py  test_vqe_solver_extended.py  test_vqe_solver_optimizer_config.py
tests/stream/: test_kafka_interface.py  test_kafka_interface_coverage.py  test_spark_extraction.py
tests/structures/: test_vqe_observation.py
tests/utils/: test_schema_registry.py  test_schema_registry_coverage.py  test_timer.py
tests/visual/: test_energy_plotter.py  test_molecule.py  test_operator.py
(+28 files in other folders)
