[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = 'quantum-pipeline'
description = 'Framework for running, monitoring and analysing quantum algorithms.'
authors = [
    {name = 'Piotr Krzysztof', email = 'piotrkrzysztoflis@pm.me'}
]
maintainers = [
    {name = 'Piotr Krzysztof', email = 'piotrkrzysztoflis@pm.me'}
]

version = "1.3.3"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
readme = "README.md"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux"
]

dependencies = [
    # Quantum computing
    "qiskit>=1.4.2",
    "qiskit-ibm-runtime>=0.37.0",
    "qiskit-aer>=0.15.1",
    "qiskit-nature>=0.7.2",
    "pyscf>=2.8.0",

    # Visualization and reporting
    "reportlab>=4.3.1",
    "matplotlib>=3.10.0",
    "pylatexenc>=2.10",

    # Scientific computing
    "scipy>=1.15.2",
    "numpy>=2.2.3",
    "psutil>=7.1.2",

    # Data streaming and processing
    "avro>=1.12.0",
    "kafka-python-ng>=2.2.3",
    "pyspark>=3.5.5",

    # Utilities
    "cryptography>=44.0.1",
    "Jinja2>=3.1.6",
    "Requests>=2.32.3",
]

[project.optional-dependencies]
# Development dependencies: testing, debugging, code quality
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=7.0.0",
    "debugpy>=1.8.12",
    "ruff>=0.6.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "flake8>=7.0.0",
    "testcontainers>=4.13.3",
    "pytest-mock>=3.15.1",
]

# Documentation generation and serving
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocs-git-revision-date-localized-plugin>=1.2.2",
    "pymdown-extensions>=10.7",
]

# Apache Airflow orchestration integration
airflow = [
    "apache-airflow>=2.10.5",
    "apache-airflow-providers-apache-spark>=5.1.1",
]

[project.urls]
Homepage = "https://github.com/straightchlorine/quantum-pipeline"

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ASYNC", "S", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.black]
line-length = 99
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
pythonpath = [
    "."
]

[tool.coverage.run]
source = ["quantum_pipeline"]
omit = ["tests/*"]

[tool.flake8]
max-line-length = 127
max-complexity = 10
ignore = ["C901"]
select = ["E9", "F63", "F7", "F82"]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    "build",
    "dist",
]

[project.scripts]
quantum-pipeline = "quantum_pipeline.cli:main"
